<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Celebrate Pride</string>
  <string name="pick_from_photo">Pick from photos</string>
  <string name="import_facebook_profile">Import facebook profile</string>
  <string name="source_code">Source</string>
  <string name="image_credit">Assets</string>
  <string name="take_a_picture">Take a picture</string>
  <string name="about_me">About me</string>

  <string name="error_from_online_gallery">Oops, this is an online photo which is not yet supported! \nPlease pick another one.</string>
  <string name="error_get_image_from_camera">There was an error getting photo data from your camera. Please try again.</string>
  <string name="error_load_image">Unable to load image</string>
  <string name="error_store_image">Unable to store image</string>
  <string name="error_save_image">Unable to save image: %s</string>

  <string name="guide_how_to_share">Click on the photo to save &amp; share it!</string>
  <string name="share_title">Created with http://bit.ly/celebrate-pride-android</string>
  <string name="share_to">Share to</string>
  <string name="saved">Photo is automatically saved!</string>
</resources>
