<?xml version="1" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/celebrate_color6"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <FrameLayout
      android:layout_width="@dimen/photo_size"
      android:layout_height="@dimen/photo_size"
      android:background="@drawable/photo_background"
      android:padding="@dimen/size_02"
      android:layout_marginBottom="@dimen/size_02"
      >
      <ImageButton
          android:id="@+id/photo"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="0dp"
          android:src="@drawable/sample"
          android:scaleType="fitCenter"
          android:contentDescription="@null"
          />
      <ProgressBar
          android:id="@android:id/progress"
          android:visibility="gone"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
  </FrameLayout>
  <Button
      android:id="@+id/take_picture"
      android:background="@color/celebrate_color1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/take_a_picture"
      />
  <Button
      android:id="@+id/pick_photo"
      android:background="@color/celebrate_color2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/pick_from_photo"
      />
  <Button
      android:id="@+id/import_facebook"
      android:background="@color/celebrate_color3"
      android:visibility="gone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/import_facebook_profile"
      />
  <LinearLayout
      android:gravity="bottom|center"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      >
    <TextView
        android:id="@+id/source_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_01"
        android:layout_marginEnd="@dimen/size_01"
        android:layout_marginBottom="4dp"
        android:text="@string/source_code"
        />
    <ImageView
        android:id="@+id/source_2"
        android:layout_width="@dimen/size_04"
        android:layout_height="@dimen/size_04"
        android:src="@drawable/github"
        android:contentDescription="@null"
        />
    <android.widget.Space
        android:layout_width="@dimen/size_04"
        android:layout_height="0dp"
        />
    <TextView
        android:id="@+id/t7m_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/size_01"
        android:layout_marginEnd="@dimen/size_01"
        android:layout_marginBottom="4dp"
        android:text="@string/image_credit"
        />
    <ImageView
        android:id="@+id/t7m_2"
        android:layout_width="@dimen/size_04"
        android:layout_height="@dimen/size_04"
        android:src="@drawable/t7m"
        android:contentDescription="@null"
        />
  </LinearLayout>
</LinearLayout>